--- a/Task5/index.html
+++ b/Task5/index.html
@@ -15,15 +15,15 @@
             <h4>Student</h4>
         </div>
         <div class="nav-img">
-            <img src="images/my-removebg-preview.png" alt="">
+            <img src="/A1-PartB/images/my-removebg-preview.png" alt="">
         </div>
     </div>
     <div class="nav-links">
-        <img src="images/LinkedIn_icon_circle.svg-removebg-preview.png" alt="">
+        <img src="/A1-PartB/images/LinkedIn_icon_circle.svg-removebg-preview.png" alt="">
         <a href="https://www.linkedin.com/in/muhammad-usman-ali-294701242/" target="_blank">Linkedin</a>
-        <img src="images/Gmail-logo.png" alt="">
+        <img src="/A1-PartB/images/Gmail-logo.png" alt="">
         <a href="mailto:usmanmanagement23@gmail.com">usman@gmail.com</a>
-        <img src="images/github.png" alt="">
+        <img src="/A1-PartB/images/github.png" alt="">
         <a href="https://github.com/UsmanAli90" target="_blank">Github</a>
     </div>
 
